RESOLVED FIXED79268
JSString::outOfMemory() should ASSERT(isRope()) rather than !isRope()
https://bugs.webkit.org/show_bug.cgi?id=79268
Summary JSString::outOfMemory() should ASSERT(isRope()) rather than !isRope()
Yong Li
Reported 2012-02-22 12:33:17 PST
It seems JSString::outOfMemory() should ASSERT(isRope()) instead of ASSERT(!isRope())
Attachments
the patch (1.32 KB, patch)
2012-02-22 13:02 PST, Yong Li
no flags
Yong Li
Comment 1 2012-02-22 13:02:30 PST
Created attachment 128271 [details] the patch
Kentaro Hara
Comment 2 2012-02-22 20:33:50 PST
Comment on attachment 128271 [details] the patch The change makes sense.
Yong Li
Comment 3 2012-02-23 06:48:39 PST
(In reply to comment #2) > (From update of attachment 128271 [details]) > The change makes sense. Thanks for reviewing!
Kentaro Hara
Comment 4 2012-02-23 06:52:19 PST
Please note that at present the WebKit svn server is down and something wrong is happening around the commit queue. If the commit fails, let us commit it again after the server recovers.
WebKit Review Bot
Comment 5 2012-02-23 07:42:47 PST
Comment on attachment 128271 [details] the patch Rejecting attachment 128271 [details] from review queue. haraken@chromium.org does not have reviewer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have reviewer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Review Bot
Comment 6 2012-02-23 11:28:54 PST
Comment on attachment 128271 [details] the patch Clearing flags on attachment: 128271 Committed r108649: <http://trac.webkit.org/changeset/108649>
WebKit Review Bot
Comment 7 2012-02-23 11:28:59 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.