JSString::outOfMemory() should ASSERT(isRope()) rather than !isRope() https://bugs.webkit.org/show_bug.cgi?id=79268

Patch by Yong Li <yoli@rim.com> on 2012-02-23
Reviewed by Michael Saboff.

resolveRope() is the only caller of outOfMemory(), and it calls outOfMemory()
after it fails to allocate a buffer for m_value. So outOfMemory() should assert
isRope() rather than !isRope().

* runtime/JSString.cpp:
(JSC::JSString::outOfMemory):

Canonical link: https://commits.webkit.org/96431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108649 268f45cc-cd09-0410-ab3c-d52691b4dbfc